[gd_scene load_steps=10 format=3 uid="uid://puaoqjx2fbjt"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_3b3n5"]
[ext_resource type="Texture2D" uid="uid://ylwtfn1ux3ie" path="res://assets/sprites.png" id="1_arsjj"]
[ext_resource type="Shader" path="res://shaders/damage_flash.gdshader" id="2_3pewr"]
[ext_resource type="Script" path="res://common/2d/player-movement-controller/player_movement_controller_2d.gd" id="3_wvq62"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yr15r"]
resource_local_to_scene = true
shader = ExtResource("2_3pewr")
shader_parameter/color = Color(1, 0.0470588, 0.105882, 1)
shader_parameter/flash_state = 0.0

[sub_resource type="Animation" id="Animation_6ikey"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5avs2"]
resource_name = "damage_flash"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pp5c1"]
_data = {
"RESET": SubResource("Animation_6ikey"),
"damage_flash": SubResource("Animation_5avs2")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uxyem"]
radius = 8.0
height = 16.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_3b3n5")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_yr15r")
texture = ExtResource("1_arsjj")
region_enabled = true
region_rect = Rect2(48, 0, 16, 16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_pp5c1")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_uxyem")

[node name="PlayerMovementController2D" type="Node" parent="."]
script = ExtResource("3_wvq62")

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
lifetime = 0.2
randomness = 0.13
emission_shape = 1
emission_sphere_radius = 8.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
tangential_accel_max = 17.62
scale_amount_min = 3.0
scale_amount_max = 3.0
color = Color(0, 0, 0, 1)

[connection signal="apply_movement" from="PlayerMovementController2D" to="." method="_on_player_movement_controller_2d_apply_movement"]
